fix alignment of code with line numbers

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -53,7 +53,7 @@ $subheading-top-spacing: 2em;
 $subheadings-align: left;
 
 $code-font-family: 'Cousine';
-$code-font-size: 0.75em;
+$code-font-size: 1em;
 $code-padding: 0.4em;
 $code-margin: 0.4em;
 $code-border-radius: 3px;
